[package]
name = "sim_city_4_on_modern_computers_guide"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
console_error_panic_hook = "0.1.7"
dominator = "0.5.38"
futures-signals = "0.3.34"
gloo = "0.11.0"
itertools = "0.14.0"
futures = "0.3.32"
js-sys = "0.3.77"
reqwest = "0.13.2"
mutablex = "0.1.1"
once_cell = "1.21.3"
serde = "1.0.219"
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3.77", default-features = false, features = [
    "Blob",
    "Cache",
    "CacheStorage",
    "Clipboard",
    "console",
    "DomRect",
    "Document",
    "DomRect",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FileReader",
    "FileSystemDirectoryHandle",
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
    "HtmlAnchorElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "HtmlCollection",
    "HtmlDetailsElement",
    "HtmlDivElement",
    "HtmlEmbedElement",
    "HtmlHeadingElement",
    "HtmlIFrameElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlObjectElement",
    "HtmlOptionElement",
    "HtmlParagraphElement",
    "HtmlProgressElement",
    "HtmlSelectElement",
    "HtmlSpanElement",
    "HtmlTableCellElement",
    "HtmlTableElement",
    "HtmlTableRowElement",
    "HtmlTableSectionElement",
    "HtmlVideoElement",
    "Navigator",
    "NodeList",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "ReadableStreamReadResult",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
    "ScrollToOptions",
    "VisibilityState",
    "Window",
    "Worker",
    "WorkerOptions",
    "WorkerType",
] }
